--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,7 +3,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 15px;
+    padding: 30px;
     font-weight: bold;
     box-shadow: 0 1px 3px rgba(0,0,0,0.05);
 }
@@ -17,7 +17,10 @@ header{
 }
 .theme-container{
     font-size: 20px;
-    margin-bottom: 100px;
     cursor: pointer;
+    margin-left: 10px;
+    justify-items: center;
+}
+.icon{
     margin-left: 10px;
 }
